// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Status Content Component should render cancelled-specific help content when test is in cancelled mode 1`] = `
<div>
  <div>
    <ContentText
      color="gray.600"
      fontSize="200"
      mt="300"
    >
      This test run was cancelled. To re-run this test, click "Edit and Reschedule Test".
    </ContentText>
  </div>
  <ContentText
    color="gray.600"
    fontSize="200"
    mt="300"
  >
    <span>
      You can read about the different A/B Test states 
    </span>
    <ExternalLink
      to="https://www.sparkpost.com/docs/tech-resources/a-b-testing-sparkpost/#ab-testing-states"
    >
      here
    </ExternalLink>
    .
  </ContentText>
</div>
`;

exports[`Status Content Component should render distinct help content when test is completed for bayesian mode tests and the winner was NOT found 1`] = `
<div>
  <ContentText
    color="gray.600"
    fontSize="200"
    mt="300"
  >
    This test has concluded and it now sending the default template. You may override it with a new one without starting a new test. This test was started and completed at the times shown.
  </ContentText>
</div>
`;

exports[`Status Content Component should render distinct help content when test is completed for bayesian mode tests and the winner was found 1`] = `
<div>
  <ContentText
    color="gray.600"
    fontSize="200"
    mt="300"
  >
    This test has concluded and it now sending the winning template. You may override it with a new one without starting a new test. This test was started and completed at the times shown.
  </ContentText>
</div>
`;

exports[`Status Content Component should render distinct help content when test is completed for learning mode tests 1`] = `
<div>
  <ContentText
    color="gray.600"
    fontSize="200"
    mt="300"
  >
    This test has concluded and it now sending the default template. You may override the default with a new one without starting a new test. This test was started and completed at the times shown.
  </ContentText>
</div>
`;

exports[`Status Content Component should render draft-specific help content when test is in draft mode 1`] = `
<div>
  <div>
    <ContentText
      color="gray.600"
      fontSize="200"
      mt="300"
    >
      You can update your Test Name and select a start time and end time to schedule your A/B Test.
    </ContentText>
  </div>
  <ContentText
    color="gray.600"
    fontSize="200"
    mt="300"
  >
    <span>
      You can read about the different A/B Test states 
    </span>
    <ExternalLink
      to="https://www.sparkpost.com/docs/tech-resources/a-b-testing-sparkpost/#ab-testing-states"
    >
      here
    </ExternalLink>
    .
  </ContentText>
</div>
`;

exports[`Status Content Component should render nothing when a test is malformed 1`] = `
<div>
  <ContentText
    color="gray.600"
    fontSize="200"
    mt="300"
  >
    <span>
      You can read about the different A/B Test states 
    </span>
    <ExternalLink
      to="https://www.sparkpost.com/docs/tech-resources/a-b-testing-sparkpost/#ab-testing-states"
    >
      here
    </ExternalLink>
    .
  </ContentText>
</div>
`;

exports[`Status Content Component should render rescheduling-specific help content when test is in cancelled mode and rescheduling the test 1`] = `
<div>
  <div>
    <ContentText
      color="gray.600"
      fontSize="200"
      mt="300"
    >
      You can update your Test Name and select a start time and end time to schedule your A/B Test.
    </ContentText>
  </div>
  <ContentText
    color="gray.600"
    fontSize="200"
    mt="300"
  >
    <span>
      You can read about the different A/B Test states 
    </span>
    <ExternalLink
      to="https://www.sparkpost.com/docs/tech-resources/a-b-testing-sparkpost/#ab-testing-states"
    >
      here
    </ExternalLink>
    .
  </ContentText>
</div>
`;

exports[`Status Content Component should render rescheduling-specific help content when test is in completed mode and rescheduling the test 1`] = `
<div>
  <div>
    <ContentText
      color="gray.600"
      fontSize="200"
      mt="300"
    >
      You can update your Test Name and select a start time and end time to schedule your A/B Test.
    </ContentText>
  </div>
  <ContentText
    color="gray.600"
    fontSize="200"
    mt="300"
  >
    <span>
      You can read about the different A/B Test states 
    </span>
    <ExternalLink
      to="https://www.sparkpost.com/docs/tech-resources/a-b-testing-sparkpost/#ab-testing-states"
    >
      here
    </ExternalLink>
    .
  </ContentText>
</div>
`;

exports[`Status Content Component should render running-specific help content when test is in running mode 1`] = `
<div>
  <div>
    <ContentText
      color="gray.600"
      fontSize="200"
      mt="300"
    >
      This test is currently running. It will conclude when either:
      <ul>
        <li>
          the end date + engagement timeout period is reached
        </li>
        <li>
          the desired sample size limit is reached + engagement timeout period is reached
        </li>
      </ul>
    </ContentText>
  </div>
  <ContentText
    color="gray.600"
    fontSize="200"
    mt="300"
  >
    <span>
      You can read about the different A/B Test states 
    </span>
    <ExternalLink
      to="https://www.sparkpost.com/docs/tech-resources/a-b-testing-sparkpost/#ab-testing-states"
    >
      here
    </ExternalLink>
    .
  </ContentText>
</div>
`;

exports[`Status Content Component should render scheduled-specific help content when test is in scheduled mode 1`] = `
<div>
  <div>
    <ContentText
      color="gray.600"
      fontSize="200"
      mt="300"
    >
      This test has been scheduled. You can update your Test Name, start time, or end time.
    </ContentText>
  </div>
  <ContentText
    color="gray.600"
    fontSize="200"
    mt="300"
  >
    <span>
      You can read about the different A/B Test states 
    </span>
    <ExternalLink
      to="https://www.sparkpost.com/docs/tech-resources/a-b-testing-sparkpost/#ab-testing-states"
    >
      here
    </ExternalLink>
    .
  </ContentText>
</div>
`;
